--- a/environment.yml
+++ b/environment.yml
@@ -288,7 +288,6 @@ dependencies:
   - tzdata=2025b=h78e105d_0
   - uhi=0.5.0=pyhd8ed1ab_0
   - unicodedata2=16.0.0=py39h8cd3c5a_0
-  - uproot=5.6.3=pyhe01879c_0
   - urllib3=2.5.0=pyhd8ed1ab_0
   - vector=1.6.3=pyhe01879c_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
@@ -316,4 +315,5 @@ dependencies:
       - seaborn==0.13.2
       - tabulate==0.9.0
       - threadpoolctl==3.6.0
+      - uproot==3.6.4
 prefix: /home/jsandesara_umass_edu/.conda/envs/nsbi_env
