--- a/pixi.toml
+++ b/pixi.toml
@@ -29,6 +29,7 @@ cuda-version = "==12.5"
 cudnn = "8.9.*"
 onnxruntime = "1.18.*"
 uproot = ">=5.6.4,<6"
+coffea = ">=2025.7.3,<2026"
 
 [feature.gpu.pypi-dependencies]
 nsbi-common-utils = {path = '.', editable = true}
