--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -1,7 +1,6 @@
 General:
-      Measurement: "higgs_tautau_signal_strength"
-      POI: "mu_htautau"
-      
+      Measurement    : higgs_tautau_signal_strength
+      POI            : mu_htautau
 
 Samples:
     - Name              : htautau
@@ -144,47 +143,58 @@ Regions:
     Binning:
         - 4.500021934509277
         - 5.942246437072754
--   Name: SR
-    Filter: presel_score>=-1.0 & presel_score<=4.5
-    Variable: null
-    Type: unbinned
-    Binning: null
+-   Name            : SR
+    Filter          : presel_score>=-1.0 & presel_score<=4.5
+    Type            : unbinned
+    Variable        : null
+    Binning         : null
+    AsimovWeights   : saved_datasets/asimov_weights.npy
     TrainedModels:
         - SampleName    : htautau
-          Nominal       : /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_htautau/
+          Nominal   : 
+               Models  : saved_data/output_training_nominal/output_model_params_htautau/
+               Ratios  : saved_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy
           Systematics    :
-
-                 - SystName: TES
-                   ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_Up/
-                   ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_TES_Dn/
-
-                - SystName: JES
-                   ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_Up/
-                   ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_htautau_JES_Dn/
-
+             - SystName: TES
+               ModelsUp: saved_data/output_training_systematics/output_model_params_htautau_TES_Up/
+               ModelsDn: saved_data/output_training_systematics/output_model_params_htautau_TES_Dn/
+               RatiosUp: saved_data/output_training_systematics/output_ratios_htautau_TES_Up/ratio_TES_Up.npy
+               RatiosDn: saved_data/output_training_systematics/output_ratios_htautau_TES_Dn/ratio_TES_Dn.npy
+             - SystName: JES
+               ModelsUp: saved_data/output_training_systematics/output_model_params_htautau_JES_Up/
+               ModelsDn: saved_data/output_training_systematics/output_model_params_htautau_JES_Dn/
+               RatiosUp: saved_data/output_training_systematics/output_ratios_htautau_JES_Up/ratio_JES_Up.npy
+               RatiosDn: saved_data/output_training_systematics/output_ratios_htautau_JES_Dn/ratio_JES_Dn.npy
         - SampleName    : ttbar
-          Nominal       : /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ttbar/
+          Nominal       : 
+                Models  : saved_data/output_training_nominal/output_model_params_ttbar/
+                Ratios  : saved_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy
           Systematics    :
-        
-             - SystName: TES
-               ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_Up/
-               ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_TES_Dn/
-
-               - SystName: JES
-                 ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_Up/
-                 ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ttbar_JES_Dn/
-                           
+            - SystName: TES
+              ModelsUp: saved_data/output_training_systematics/output_model_params_ttbar_TES_Up/
+              ModelsDn: saved_data/output_training_systematics/output_model_params_ttbar_TES_Dn/
+              RatiosUp: saved_data/output_training_systematics/output_ratios_ttbar_TES_Up/ratio_TES_Up.npy
+              RatiosDn: saved_data/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy
+            - SystName: JES
+              ModelsUp: saved_data/output_training_systematics/output_model_params_ttbar_JES_Up/
+              ModelsDn: saved_data/output_training_systematics/output_model_params_ttbar_JES_Dn/ 
+              RatiosUp: saved_data/output_training_systematics/output_ratios_ttbar_JES_Up/ratio_JES_Up.npy
+              RatiosDn: saved_data/output_training_systematics/output_ratios_ttbar_JES_Dn/ratio_JES_Dn.npy
         - SampleName    : ztautau
-          Nominal       : /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_nominal/output_model_params_ztautau/
+          Nominal       : 
+                Models  : saved_data/output_training_nominal/output_model_params_ztautau/
+                Ratios  : saved_data/output_training_nominal/output_ratios_ttbar/ratio_ztautau.npy
           Systematics    :
-        
              - SystName: TES
-               ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_Up/
-               ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_TES_Dn/
-
-               - SystName: JES
-                 ModelsUp: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_Up/
-                 ModelsDn: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau/saved_data/output_training_systematics/output_model_params_ztautau_JES_Dn/
+               ModelsUp: saved_data/output_training_systematics/output_model_params_ztautau_TES_Up/
+               ModelsDn: saved_data/output_training_systematics/output_model_params_ztautau_TES_Dn/
+               RatiosUp: saved_data/output_training_systematics/output_ratios_ztautau_TES_Up/ratio_TES_Up.npy
+               RatiosDn: saved_data/output_training_systematics/output_ratios_ztautau_TES_Dn/ratio_TES_Dn.npy
+             - SystName: JES
+               ModelsUp: saved_data/output_training_systematics/output_model_params_ztautau_JES_Up/
+               ModelsDn: saved_data/output_training_systematics/output_model_params_ztautau_JES_Dn/
+               RatiosUp: saved_data/output_training_systematics/output_ratios_ztautau_JES_Up/ratio_JES_Up.npy
+               RatiosDn: saved_data/output_training_systematics/output_ratios_ztautau_JES_Dn/ratio_JES_Dn.npy
                            
 
                  
