--- a/pixi.toml
+++ b/pixi.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
+cabinetry = ">=0.6.0,<0.7"
+ipykernel = ">=6.30.1,<7"
 
 [feature.gpu.system-requirements]
 cuda = "12.5"
