--- a/pixi.toml
+++ b/pixi.toml
@@ -15,6 +15,7 @@ cuda = "12.5"
 
 [feature.gpu.dependencies]
 python = ">=3.12.11,<3.13"
+pip = ">=25.2,<26"
 jax = ">=0.4.31,<0.5"
 tf2onnx = ">=1.16.1,<2"
 scikit-learn = ">=1.7.1,<2"
