path streamlining in config file

--- a/FAIR_universe_Higgs_tautau/config.yml
+++ b/FAIR_universe_Higgs_tautau/config.yml
@@ -1,3 +1,6 @@
+Paths:
+  datasets_dir: &datasets_dir saved_datasets_new
+
 General:
       Measurement    : higgs_tautau_signal_strength
       POI            : mu_htautau
@@ -5,21 +8,21 @@ General:
 Samples:
     - Name              : htautau
       Tree              : tree_htautau
-      SamplePath        : saved_datasets_new/dataset_nominal.root
+      SamplePath        : ${datasets_dir}/dataset_nominal.root
       Weight            : weights
       UseAsReference    : True
       UseAsBasis        : True
 
     - Name              : ttbar
       Tree              : tree_ttbar
-      SamplePath        : saved_datasets_new/dataset_nominal.root
+      SamplePath        : ${datasets_dir}/dataset_nominal.root
       Weight            : weights
       UseAsReference    : True
       UseAsBasis        : True
         
     - Name : ztautau
       Tree              : tree_ztautau
-      SamplePath        : saved_datasets_new/dataset_nominal.root
+      SamplePath        : ${datasets_dir}/dataset_nominal.root
       Weight            : weights
       UseAsReference    : False
       UseAsBasis        : True
@@ -48,28 +51,28 @@ Systematics:
               - ttbar
         Up                  : 
             -   SampleName        : htautau
-                Path              : saved_datasets_new/dataset_JES_up.root
+                Path              : ${datasets_dir}/dataset_JES_up.root
                 Tree              : tree_htautau
                 Weight            : weights
             -   SampleName        : ztautau
-                Path              : saved_datasets_new/dataset_JES_up.root
+                Path              : ${datasets_dir}/dataset_JES_up.root
                 Tree              : tree_ztautau
                 Weight            : weights
             -   SampleName        : ttbar
-                Path              : saved_datasets_new/dataset_JES_up.root
+                Path              : ${datasets_dir}/dataset_JES_up.root
                 Tree              : tree_ttbar
                 Weight            : weights
         Dn                  :
             -   SampleName        : htautau
-                Path              : saved_datasets_new/dataset_JES_dn.root
+                Path              : ${datasets_dir}/dataset_JES_dn.root
                 Tree              : tree_htautau
                 Weight            : weights
             -   SampleName        : ztautau
-                Path              : saved_datasets_new/dataset_JES_dn.root
+                Path              : ${datasets_dir}/dataset_JES_dn.root
                 Tree              : tree_ztautau
                 Weight            : weights
             -   SampleName        : ttbar
-                Path              : saved_datasets_new/dataset_JES_dn.root
+                Path              : ${datasets_dir}/dataset_JES_dn.root
                 Tree              : tree_ttbar
                 Weight            : weights
     -   Name                : TES
@@ -81,28 +84,28 @@ Systematics:
               - ttbar
         Up                  :
             -   SampleName        : htautau
-                Path              : saved_datasets_new/dataset_TES_up.root
+                Path              : ${datasets_dir}/dataset_TES_up.root
                 Tree              : tree_htautau
                 Weight            : weights
             -   SampleName        : ztautau
-                Path              : saved_datasets_new/dataset_TES_up.root
+                Path              : ${datasets_dir}/dataset_TES_up.root
                 Tree              : tree_ztautau
                 Weight            : weights
             -   SampleName        : ttbar
-                Path              : saved_datasets_new/dataset_TES_up.root
+                Path              : ${datasets_dir}/dataset_TES_up.root
                 Tree              : tree_ttbar
                 Weight            : weights
         Dn                  :
             -   SampleName        : htautau
-                Path              : saved_datasets_new/dataset_TES_dn.root
+                Path              : ${datasets_dir}/dataset_TES_dn.root
                 Tree              : tree_htautau
                 Weight            : weights
             -   SampleName        : ztautau
-                Path              : saved_datasets_new/dataset_TES_dn.root
+                Path              : ${datasets_dir}/dataset_TES_dn.root
                 Tree              : tree_ztautau
                 Weight            : weights
             -   SampleName        : ttbar
-                Path              : saved_datasets_new/dataset_TES_dn.root
+                Path              : ${datasets_dir}/dataset_TES_dn.root
                 Tree              : tree_ttbar
                 Weight            : weights
 
@@ -150,53 +153,53 @@ Regions:
     Type            : unbinned
     Variable        : null
     Binning         : null
-    AsimovWeights   : saved_datasets_new/asimov_weights.npy
+    AsimovWeights   : ${datasets_dir}/asimov_weights.npy
     TrainedModels:
         - SampleName    : htautau
           Nominal   : 
-               Models  : saved_data/output_training_nominal/output_model_params_htautau/
-               Ratios  : saved_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy
+               Models  : ${datasets_dir}/output_training_nominal/output_model_params_htautau/
+               Ratios  : ${datasets_dir}/output_training_nominal/output_ratios_htautau/ratio_htautau.npy
           Systematics    :
              - SystName: TES
-               ModelsUp: saved_data/output_training_systematics/output_model_params_htautau_TES_Up/
-               ModelsDn: saved_data/output_training_systematics/output_model_params_htautau_TES_Dn/
-               RatiosUp: saved_data/output_training_systematics/output_ratios_htautau_TES_Up/ratio_TES_Up.npy
-               RatiosDn: saved_data/output_training_systematics/output_ratios_htautau_TES_Dn/ratio_TES_Dn.npy
+               ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_htautau_TES_Up/
+               ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_htautau_TES_Dn/
+               RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_htautau_TES_Up/ratio_TES_Up.npy
+               RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_htautau_TES_Dn/ratio_TES_Dn.npy
              - SystName: JES
-               ModelsUp: saved_data/output_training_systematics/output_model_params_htautau_JES_Up/
-               ModelsDn: saved_data/output_training_systematics/output_model_params_htautau_JES_Dn/
-               RatiosUp: saved_data/output_training_systematics/output_ratios_htautau_JES_Up/ratio_JES_Up.npy
-               RatiosDn: saved_data/output_training_systematics/output_ratios_htautau_JES_Dn/ratio_JES_Dn.npy
+               ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_htautau_JES_Up/
+               ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_htautau_JES_Dn/
+               RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_htautau_JES_Up/ratio_JES_Up.npy
+               RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_htautau_JES_Dn/ratio_JES_Dn.npy
         - SampleName    : ttbar
           Nominal       : 
-                Models  : saved_data/output_training_nominal/output_model_params_ttbar/
-                Ratios  : saved_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy
+                Models  : ${datasets_dir}/output_training_nominal/output_model_params_ttbar/
+                Ratios  : ${datasets_dir}/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy
           Systematics    :
             - SystName: TES
-              ModelsUp: saved_data/output_training_systematics/output_model_params_ttbar_TES_Up/
-              ModelsDn: saved_data/output_training_systematics/output_model_params_ttbar_TES_Dn/
-              RatiosUp: saved_data/output_training_systematics/output_ratios_ttbar_TES_Up/ratio_TES_Up.npy
-              RatiosDn: saved_data/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy
+              ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_ttbar_TES_Up/
+              ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_ttbar_TES_Dn/
+              RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_ttbar_TES_Up/ratio_TES_Up.npy
+              RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy
             - SystName: JES
-              ModelsUp: saved_data/output_training_systematics/output_model_params_ttbar_JES_Up/
-              ModelsDn: saved_data/output_training_systematics/output_model_params_ttbar_JES_Dn/ 
-              RatiosUp: saved_data/output_training_systematics/output_ratios_ttbar_JES_Up/ratio_JES_Up.npy
-              RatiosDn: saved_data/output_training_systematics/output_ratios_ttbar_JES_Dn/ratio_JES_Dn.npy
+              ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_ttbar_JES_Up/
+              ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_ttbar_JES_Dn/ 
+              RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_ttbar_JES_Up/ratio_JES_Up.npy
+              RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_ttbar_JES_Dn/ratio_JES_Dn.npy
         - SampleName    : ztautau
           Nominal       : 
-                Models  : saved_data/output_training_nominal/output_model_params_ztautau/
-                Ratios  : saved_data/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy
+                Models  : ${datasets_dir}/output_training_nominal/output_model_params_ztautau/
+                Ratios  : ${datasets_dir}/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy
           Systematics    :
              - SystName: TES
-               ModelsUp: saved_data/output_training_systematics/output_model_params_ztautau_TES_Up/
-               ModelsDn: saved_data/output_training_systematics/output_model_params_ztautau_TES_Dn/
-               RatiosUp: saved_data/output_training_systematics/output_ratios_ztautau_TES_Up/ratio_TES_Up.npy
-               RatiosDn: saved_data/output_training_systematics/output_ratios_ztautau_TES_Dn/ratio_TES_Dn.npy
+               ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_ztautau_TES_Up/
+               ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_ztautau_TES_Dn/
+               RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_ztautau_TES_Up/ratio_TES_Up.npy
+               RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_ztautau_TES_Dn/ratio_TES_Dn.npy
              - SystName: JES
-               ModelsUp: saved_data/output_training_systematics/output_model_params_ztautau_JES_Up/
-               ModelsDn: saved_data/output_training_systematics/output_model_params_ztautau_JES_Dn/
-               RatiosUp: saved_data/output_training_systematics/output_ratios_ztautau_JES_Up/ratio_JES_Up.npy
-               RatiosDn: saved_data/output_training_systematics/output_ratios_ztautau_JES_Dn/ratio_JES_Dn.npy
+               ModelsUp: ${datasets_dir}/output_training_systematics/output_model_params_ztautau_JES_Up/
+               ModelsDn: ${datasets_dir}/output_training_systematics/output_model_params_ztautau_JES_Dn/
+               RatiosUp: ${datasets_dir}/output_training_systematics/output_ratios_ztautau_JES_Up/ratio_JES_Up.npy
+               RatiosDn: ${datasets_dir}/output_training_systematics/output_ratios_ztautau_JES_Dn/ratio_JES_Dn.npy
                            
 
                  
